src/styles.css
.text-center{
  text-align: center;
}

.table{
  margin: auto;
  margin-top: 5px;
  position: relative;
  height: 600px;
  max-width: 1000px;
  overflow: scroll;
  border: 5px solid #2a503d;
  border-radius: 10px;
}

.container{
  display: flex;
  justify-content: center;
}

.card-outline{
  margin: 7px;
  float: left;
  width: 100px;
  height: 140px;
  border: 2px solid white;
  border-radius: 10px;
  box-sizing: border-box;
}

.played-card-outline{
  margin: 5px;
  float: left;
  width: 100px;
  height: 140px;
  border: 2px dotted #182e23;
  border-radius: 10px;
  box-sizing: border-box;
}

.row:after {
  clear: both;
  content: '';
  display: table;
}

.light-text-box{
  margin-top: 3px;
  margin-left: -1px;
  margin-right: -1px;
  width: 90px;
  border: 1px solid white;
  border-radius: 3px;
  background-color: rgb(0, 0, 0);
  display: block;

  text-align: center;
  color: aliceblue;
  font-weight: 900;
}

.light-box{
  display: block;
  margin-top: -1px;
  margin-left: -1px;
  margin-right: -1px;
  width: 90px;
  border: 1px solid white;
  border-radius: 3px;
  background-color: black;
  text-align: center;
  padding: 10px 0;
}

.light {
  height: 30px;
  width: 30px;
  margin-left: 2.5px;
  margin-right: 2.5px;
  background-color: rgb(39, 35, 24); 
  border-radius: 50%;
  display: inline-block;
}

.footer{
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
}

.play-button{
  margin: 5px;
  background-color: #182e23;
}

